* TODO: Add item about recover-safe and recover-unsafe settings.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1069 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/TODO
+++ b/TODO
@@ -31,6 +31,11 @@ TODO R package:
 
 TODO General:
 
+ * Give an error if the user tries to change certain settings when recovering
+   (maxExperiments, elite, etc.). Other settings such as hookRun, instanceDir,
+   instanceFile, etc. are ok to change but we have to be careful to not
+   override them when recovering.
+
  * Add an option "deterministic": when the algorithm is deterministic, it does
    not make sense to test one configuration more than one time on the same
    instance.
