* TODO: Add new item.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1103 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/TODO
+++ b/TODO
@@ -31,6 +31,11 @@ TODO R package:
 
 TODO General:
 
+ * Detect cases where all possible parameter configurations can be sampled and
+   there is still enough budget to do at least one test. In that case, it is
+   not worth it to sample configurations and do several iterations. It is
+   better to generate all possible configurations and do a single F/t-race.
+
  * Give an error if the user tries to change certain settings when recovering
    (maxExperiments, elite, etc.). Other settings such as hookRun, instanceDir,
    instanceFile, etc. are ok to change but we have to be careful to not
