--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,10 @@
    training instances. See options testInstanceDir, testInstanceFile,
    testNbElites, and testIterationElites. (Leslie Perez, Manuel López-Ibáñez)
 
+ * The R interfaces of hookRun, hookEvaluate and hookRunParallel have changed.
+   See help(hook.run.default) and help(hook.evaluate.default) for examples of
+   the new interfaces.
+
 1.06
 
  * Fix bug that could introduce spurious whitespace when printing the
