* Add --load-balancing option. Print wall-clock time after each task.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1182 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -12,6 +12,20 @@
  * Reduce memory use for very large values of maxExperiments.  
    (Manuel López-Ibáñez, thanks to Federico Caselli for identifying the issue)
 
+ * New option --load-balancing (loadBalancing) for disabling load-balancing
+   when executing jobs in parallel. Load-balancing makes better use of
+   computing resources, but increases communication overhead. If this overhead
+   is large, disabling load-balancing ma be faster.
+   (Manuel López-Ibáñez, thanks to Federico Caselli for identifying the issue)
+
+ * The option --parallel in Windows now uses load-balancing by default.
+   (Manuel López-Ibáñez)
+
+ * The wall-clock time after finishing each task is printed in the output.
+   (Manuel López-Ibáñez, thanks to Federico Caselli for providing an initial
+   patch)
+
+
 
 1.06
 
