* NEWS: Fix typo.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1184 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -15,7 +15,7 @@
  * New option --load-balancing (loadBalancing) for disabling load-balancing
    when executing jobs in parallel. Load-balancing makes better use of
    computing resources, but increases communication overhead. If this overhead
-   is large, disabling load-balancing ma be faster.
+   is large, disabling load-balancing may be faster.
    (Manuel López-Ibáñez, thanks to Federico Caselli for identifying the issue)
 
  * The option --parallel in Windows now uses load-balancing by default.
