--- a/NEWS
+++ b/NEWS
@@ -63,14 +63,17 @@
 
       $ cat scenario/scenario.txt
       targetRunner <- "./target-runner"
-      $ /bin/irace -s scenario/scenario.txt
+      $ irace -s scenario/scenario.txt
 
    irace will search for "./scenario/target-runner", but given
 
-      $ /bin/irace -s scenario/scenario.txt --target-runner ./target-runner
+      $ irace -s scenario/scenario.txt --target-runner ./target-runner
    
    irace will search for "./target-runner".      (Manuel López-Ibáñez)
 
+ * New command-line wrapper for Windows installed at
+   'system.file("bin/irace.bat", package="irace")'
+   (thanks to Anthony Antoun)                                        
 
 
 1.07
